Mudanças na estilização e no script. Primeiro teste de responvisidade. v1.0

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/index.css">
+    <link rel="shortcut icon" href="assets/imagens/botao-play.png" type="image/x-icon">
     <title>CinePlus</title>
 </head>
 <body>
     <nav>
-        <h1>CinePlus</h1>
+        <h1><a href="index.html">CinePlus</a></h1>
     </nav>
     
     <form>
@@ -16,6 +17,7 @@
         <button>Pesquisar</button>
     </form>
     <div class="lista">
+
     </div>
 
     <footer>
