--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/index.css">
     <link rel="shortcut icon" href="assets/imagens/botao-play.png" type="image/x-icon">
-    <title>CinePlus</title>
+    <title>CinePlus v1.0</title>
 </head>
 <body>
     <nav>
